--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-connect": "~0.6.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-concurrent": "~0.4.3"
+    "grunt-concurrent": "~0.4.3",
+    "grunt-eco": "^0.1.1"
   },
   "build_file_name": "app"
 }
